# remote_drivingCAN

./: .gitignore
doc/: MQTTbroker.txt  Testing_Nodes_vcan0.txt  ethernet.txt  (+1 more)
wsp/src/tod_operator_interface/tod_operator_interface/tod_input_devices/: CMakeLists.txt  README.md  package.xml
wsp/src/tod_operator_interface/tod_operator_interface/tod_input_devices/config/: fanatec.yaml
wsp/src/tod_operator_interface/tod_operator_interface/tod_input_devices/launch/: tod_input_devices.launch
wsp/src/tod_operator_interface/tod_operator_interface/tod_input_devices/src/: CMakeLists.txt  InputDeviceController.cpp  InputDeviceController.h  InputDeviceNode.cpp  RosInterface.cpp  RosInterface.h  UsbEventHandlerNode.cpp
wsp/src/tod_operator_interface/tod_operator_interface/tod_input_devices/src/General/: InputDevice.cpp  InputDevice.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_input_devices/src/UsbInputDevice/: CMakeLists.txt  UsbInputDevice.cpp  UsbInputDevice.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_input_devices/src/VirtualDevice/: CMakeLists.txt  VirtualInputDevice.cpp  VirtualInputDevice.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/: CMakeLists.txt  README.md  package.xml
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/doc/: state_machine.txt
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/launch/: tod_manager.launch
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/src/common/: IpAddressDeserializer.cpp  IpAddressDeserializer.h  QtWidgetGroup.cpp  QtWidgetGroup.h  rosthread.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/src/operator/: CMakeLists.txt  IPv4ValidityChecker.cpp  IPv4ValidityChecker.h  IpAddrValidityChecker.h  OperatorManager.cpp  OperatorManager.h  OperatorManagerNode.cpp  OperatorManagerWidget.cpp  OperatorManagerWidget.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/src/operator/ui/: operatorWidget.ui
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/src/vehicle/: CMakeLists.txt  VehicleManager.cpp  VehicleManager.h  VehicleManagerNode.cpp
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/test/: CMakeLists.txt  IPv4ValidityChecker_test.cpp  TestTodManagerNode.cpp
wsp/src/tod_operator_interface/tod_operator_interface/tod_manager/yaml/: InitialIpAddresses.yaml
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/: CMakeLists.txt  README.md  package.xml
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/cmake/Modules/: FindGLM.cmake  FindOpenVR.cmake
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/launch/: demo.launch  tod_visual.launch
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/resources/OpenGL/shaders/: basic.frag  basic.vert  character.frag  character.vert  grid.frag  grid.vert  kosys.frag  kosys.vert  model.frag  shader.frag  shaderTransparent.frag  topview.frag  topview.vert  video.frag  video.vert  video1.frag  video1.vert
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/: CMakeLists.txt  Interface.cpp  Interface.h  InterfaceNode.cpp
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/TodStandardEntities/: CMakeLists.txt
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/TodStandardEntities/include/TodStandardEntities/: TodStandardEntities.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/TodStandardEntities/src/: BaseFootprint.cpp  BaseFootprint.h  Camera.cpp  Camera.h  CoordinateSystem.cpp  CoordinateSystem.h  Display.cpp  Display.h  Floor.cpp  Floor.h  Grid.cpp  Grid.h  LaserScan.cpp  LaserScan.h  ObjectList.cpp  ObjectList.h  Path.cpp  Path.h  Polygon.cpp  Polygon.h  TopView.cpp  TopView.h  Video.cpp  Video.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/: CMakeLists.txt
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/Core/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  CursorPosition.cpp  CursorPosition.h  DataContainer.h  GraphicsContext.cpp  GraphicsContext.h  ModelLoader.cpp  ModelLoader.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h  RosInterface.cpp  RosInterface.h  Window.cpp  Window.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h  KeyCodes.h  KeyEvent.cpp  KeyEvent.h  MouseCodes.h  MouseEvent.cpp  MouseEvent.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/Systems/: CameraSystem.cpp  CameraSystem.h  Renderer.cpp  Renderer.h  ShaderSystem.cpp  ShaderSystem.h  TransformSystem.cpp  TransformSystem.h  VRSystem.cpp  VRSystem.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/Window/: GLFWWindow.cpp  GLFWWindow.h
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/libs/entt/: CMakeLists.txt
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/libs/glad/: CMakeLists.txt
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/src/tofGL/libs/stb_image/: CMakeLists.txt
wsp/src/tod_operator_interface/tod_operator_interface/tod_visual/yaml/: lgsvl.yaml  pix.yaml  tum-q7.yaml  tum-q7_settings-for-robinson-projection.yaml
wsp/src/tod_vehicle_interface/tod_vehicle_interface/tod_pix_bridge/: CMakeLists.txt  package.xml
wsp/src/tod_vehicle_interface/tod_vehicle_interface/tod_pix_bridge/launch/: tod_pix_bridge.launch
wsp/src/tod_vehicle_interface/tod_vehicle_interface/tod_pix_bridge/src/: CMakeLists.txt  ControlCmdToCanNode.cpp  VehicleDataFromCanNode.cpp
(+19 files in other folders)
