<?xml version="1.0"?>
<package format="2">
<name>tod_visual</name>
<version>1.0.0</version>
<description>The tod_visual package</description>

<maintainer email="johannes.feiler@tum.de">Johannes Feiler</maintainer>
<maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>
<maintainer email="domagoj.majstorovic@tum.de">Domagoj Majstorovic</maintainer>
<maintainer email="andreas.schimpe@tum.de">Andreas Schimpe</maintainer>

<license>LGPLv3</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>tf2_ros</build_depend>
<build_depend>roslib</build_depend>
<build_depend>tod_msgs</build_depend>
<build_depend>tod_helper</build_depend>
<build_depend>tod_core</build_depend>

<build_export_depend>roscpp</build_export_depend>
<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>tf2_ros</build_export_depend>
<build_export_depend>roslib</build_export_depend>
<build_export_depend>tod_msgs</build_export_depend>
<build_export_depend>tod_helper</build_export_depend>
<build_export_depend>tod_core</build_export_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>tod_vehicle_config</exec_depend>
<exec_depend>tod_transform</exec_depend>

</package>
